[tool.poetry]
name = "some-work"
version = "0.1.0"
description = ""
authors = ["Artem Matrashov <artem.m2013@gmail.com>"]
readme = "README.md"
packages = [{include = "some_work"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
